fix some alignment issues

--- a/less/res/buttons.less
+++ b/less/res/buttons.less
@@ -5,7 +5,6 @@ button, .button {
 	font-size: 0.875rem;
 	line-height: 1.4;
 	cursor: pointer;
-	vertical-align: middle;
 	border-radius: 4px;
 	background-color: #FFF;
 	border: #CCC 1px solid;
